# hyperconsole

./: LICENSE  flake.nix  hyperconsole.cabal
app/: Demo.hs  Playwright.hs  Sensenet.hs
bench/: Bench.hs
docs/: ARCHITECTURE.md  REVIEW.md
src/: HyperConsole.hs
src/HyperConsole/: Layout.hs  Style.hs  Terminal.hs  Theme.hs  Unicode.hs  Widget.hs
src/HyperConsole/Terminal/: Evring.hs  IoUring.hs
test/: Main.hs
